updated auth flow
